# engine-sim

./: .gitignore  .gitmodules  CMakeLists.txt  CONTINUE.sh  HANDOFF.md  Makefile  README.md  libenginesim.dylib  test_bridge  test_bridge.c
assets/: bridge_main.mr
assets/part-library/parts/: heads.mr
dependencies/submodules/: CMakeLists.txt
dotnet/: BUILD.md  QUICKSTART.md  README.md  VirtualThrottle.sln
dotnet/EngineSimBridge/: EngineSimBridge.csproj  EngineSimConfig.cs  EngineSimException.cs  EngineSimNative.cs  EngineSimStats.cs  EngineSimulator.cs
dotnet/VirtualThrottle/: AudioEngine.cs  CoreAudioInterop.cs  Program.cs  ThrottleController.cs  VirtualThrottle.csproj
include/: engine_sim_bridge.h  gas_system.h  wav_loader.h
scripting/include/: actions.h  channel_types.h  node.h  object_reference_node.h
scripting/src/: language_rules.cpp
src/: combustion_chamber.cpp  engine_sim_bridge.cpp  gas_system.cpp  intake.cpp  piston_engine_simulator.cpp  simulator.cpp  synthesizer.cpp
test/: function_test.cpp  gas_system_tests.cpp  synthesizer_tests.cpp
